@startuml
left to right direction
skinparam linetype ortho
skinparam class {
    BackgroundColor<<implemented>> #D5F5D5
    BorderColor<<implemented>> #2E7D32
    FontColor<<implemented>> #1B5E20

    BackgroundColor<<partial>> #FFF3CD
    BorderColor<<partial>> #B8860B
    FontColor<<partial>> #7A5600

    BackgroundColor<<planned>> #F8D7DA
    BorderColor<<planned>> #B02A37
    FontColor<<planned>> #842029

    BackgroundColor<<external>> #E3F2FD
    BorderColor<<external>> #1565C0
    FontColor<<external>> #0D47A1
}

legend right
|= Colour |
|<#D5F5D5> Implemented |
|<#FFF3CD> Partially implemented |
|<#F8D7DA> Planned / not implemented |
|<#E3F2FD> External dependency |
endlegend

' 0 = hide dependency lines
' 1 = show dependency lines
!$SHOW_DEPENDENCIES = 0


'=============================================================================='
'Service Layer'
'=============================================================================='
package "Service Layer" #E8F5E9 {
    class SyncService <<implemented>> {
        +parser
        +inspector
        +comparator
        +locator
        +writer
        +orderer
        +scaffold
        +balancer
        +init()
        +sync()
        +status()
        +pending()
        +balance()
    }


    class Cli <<implemented>> {
        +init()
        +sync()
        +status()
        +todo()
        +balance()
    }
    Cli --> SyncService
}


'=============================================================================='
'Model Domain'
'=============================================================================='
package "Model Domain Layer" #FFF8E1 {

    package "Models" {
        enum ImplementationStatus <<implemented>> {
            PLANNED
            PARTIAL
            IMPLEMENTED
            EXTERNAL
        }


        enum MemberKind <<implemented>> {
            ATTRIBUTE
            METHOD
        }


        class UmlMember <<implemented>> {
            +name
            +kind
        }
        UmlMember ..> MemberKind


        class UmlClass <<implemented>> {
            +name
            +package
            +stereotype
            +members
        }
        UmlClass ..> UmlMember


        class CodeClass <<implemented>> {
            +name
            +module_path
            +attributes
            +methods
        }

        class ClassComparison <<implemented>> {
            +uml_class
            +status
            +missing_members
        }

        class UmlRelationship <<implemented>> {
            +source
            +target
        }

        class OrderedClass <<implemented>> {
            +comparison
            +depends_on
        }
        OrderedClass ..> ClassComparison

        class BalanceEntry <<implemented>> {
            +name
            +uml_count
            +code_count
            +diff
        }
    }

    package "Analysis" {

        class StatusComparator <<implemented>> {
            +compare()
        }
        StatusComparator ..> ClassComparison
        StatusComparator ..> ImplementationStatus

        class ClassLocator <<implemented>> {
            +to_snake_case()
            +expected_module()
            +select()
        }
        ClassLocator ..> UmlClass

        class DependencyOrderer <<implemented>> {
            +order()
        }
        DependencyOrderer ..> OrderedClass
        DependencyOrderer ..> UmlRelationship

        enum SortMode <<implemented>> {
            ABS
            SIGNED
        }

        class BalanceCalculator <<implemented>> {
            +calculate()
        }
        BalanceCalculator ..> BalanceEntry
        BalanceCalculator ..> SortMode
    }
}


'=============================================================================='
'Adapter Layer'
'=============================================================================='
package "Adapter Layer" #E3F2FD {

    package "PlantUML" {

        class PumlParser <<implemented>> {
            +parse()
            +parse_file()
            +parse_relationships()
            +parse_relationships_file()
        }
        PumlParser ..> UmlClass

        class PumlWriter <<implemented>> {
            +apply()
            +write_file()
        }
        PumlWriter ..> ClassComparison

        class PumlScaffold <<implemented>> {
            +template
            +create_file()
        }
    }

    package "Code" {

        class CodeInspector <<implemented>> {
            +inspect()
        }
        CodeInspector ..> CodeClass
    }

    package "Config" {

        class ClasspyConfig <<implemented>> {
            +puml
            +src
        }

        class ConfigLoader <<implemented>> {
            +filename
            +find_config_file()
            +load()
            +load_file()
        }
        ConfigLoader ..> ClasspyConfig
    }
}


'=============================================================================='
'Broken Links'
'=============================================================================='

SyncService --> PumlParser
SyncService --> CodeInspector
SyncService --> StatusComparator
SyncService --> ClassLocator
SyncService --> PumlWriter
SyncService --> DependencyOrderer
SyncService --> PumlScaffold
SyncService --> BalanceCalculator

PumlParser ..> UmlRelationship

Cli --> ConfigLoader

@enduml
